# frazer

./: .env.dev  .gitignore  Makefile  README.md  app.py  logging.conf  pyproject.toml  requirements.txt  requirements_fix.txt
.github/workflows/: deploy.yml  publish.yml  tag-check.yml
evaluation/: __main__.py  analysed_sentences.csv  analyzed_sentences.csv  batch_analyse.py  evaluator.py  generate.py  input_sentences.csv
evaluation/output/: baseline.csv  new.csv
evaluation/output/20250511_193143_wise_guy/: analysed.csv
evaluation/output/20250511_193908_wise_guy/: analysed.csv
evaluation/output/20250514_214934/: analysed.csv  diff.csv  words_metrics.csv
evaluation/output/20250518_113718/: analysed.csv  diff.csv  words_metrics.csv
evaluation/output/20250518_170710/: analysed.csv  diff.csv  words_metrics.csv
evaluation/tools/: batch_analyse.py  evaluate.py  metrics.py
frazer/: __init__.py  __main__.py  analyser.py  api.py  lambda.py
frontend/: build.py
site/: frazer.html
tests/: test_analyzer.py
webapp/: build.py  frazer.html  frontend.html  mock_server.py
