[project]
name = "frazer"
version = "0.0.1.dev2025022"
description = "Syntatical analysis for sentences in Polish language."
authors = [
    { name = "Adriano Oliveira" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["frazer*"]
exclude = ["tests*", "webapp"]

[project.optional-dependencies]
test = [
    "pytest==8.*",
    "pytest-cov",
]