[project]
name = "frazer"
description = "Syntatical analysis for sentences in Polish language."
authors = [
    { name = "Adriano Oliveira" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest==8.*",
    "pytest-cov",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["frazer*"]
exclude = ["tests*", "webapp"]

[tool.setuptools.dynamic]
version = {attr = "frazer.__version__"}
